--- a/products list.html
+++ b/products list.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Responsive Product Showcase</title>
+  <title>Skull Collection</title>
   <style>
     * {
       box-sizing: border-box;
